<resources>
    <string name="app_name">猎赞</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="es_login_phone_text">手机号</string>
    <string name="es_login_pwd_text">密码</string>
    <string name="es_login_get_code_text">获取验证码</string>
    <string name="es_login_sms_code_text">短信验证码</string>
    <string name="es_login_text">登录</string>
    <string name="exit_app">退出</string>
    <string name="next">下一步</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_sign_now">现在注册</string>
    <string name="login_random">随便逛逛</string>
    <string name="phone_errns">请输入正确的手机号码</string>
    <string name="get_code_succ">获取验证码成功</string>
    <string name="cancel">取消</string>
    <string name="cancel_txt">取消</string>
    <string name="confirm">确认</string>
    <string name="loading">正在加载</string>
    <string name="submit">提交</string>
    <string name="login_failed_tip">登录失败</string>
    <string name="login_loading">正在登录</string>
    <string name="login_getCoding">正在获取验证码</string>
    <string name="no_login">您没有登录，请先登录</string>
    <string name="message_count">您有 %d 条未读消息</string>
    <string name="get_author_success">申请权限成功，请耐心等待</string>
    <string name="send_message_count">当前您还能输入 %d 个字</string>
    <string name="item_good_count">%s人点赞</string>
    <string name="item_comment_count">%s人评论</string>
    <string name="invate_code_content">欢迎您加入猎赞，并感谢您对猎赞的信任与支持。现阶段猎赞仅支持邀请注册，我们为您准备了2个邀请码，您可以发给您值得信赖的猎头朋友，我们诚挚的欢迎您朋友的加入。
您的邀请码如下，每个邀请码仅可使用一次。每个邀请码如经有效使用，您将获得星巴克中杯咖啡饮料券一张或￥50元的账户余额，账户余额将可在猎赞即将推出的多项增值服务中直接使用。(此部分须跟Rita沟通确认) /n 您的邀请码</string>
    <string-array name="avatar_menu">
        <item>拍照</item>
        <item>从手机相册选择</item>
    </string-array>

    <string-array name="experience">
        <item>3年以下</item>
        <item>3-5年</item>
        <item>5-10年</item>
        <item>10年以上</item>
    </string-array>

    <string-array name="position">
        <item>猎头顾问</item>
        <item>企业HR</item>
        <item>候选人</item>
    </string-array>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
