<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.iwork.ui.activity.LoginActivity">

    <com.iwork.ui.view.TitleBar
        android:id="@+id/login_titlebar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />

    <RelativeLayout
        android:id="@+id/login_layout_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_login_layout_marginleft"
        android:layout_marginRight="@dimen/common_login_layout_marginright"
        android:layout_marginTop="@dimen/common_login_layout_margintop"
        android:background="@drawable/common_bg_normal">

        <RelativeLayout
            android:id="@+id/login_layout_phone_input"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/login_iv_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/es_login_phone" />

            <EditText
                android:id="@+id/login_ed_phone_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/login_iv_phone_icon"
                android:background="@null"
                android:hint="@string/es_login_phone_text"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/text_color_dark_gray"
                android:textColorHint="@color/text_color_s_gray"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:id="@+id/login_img_phone_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/common_delete_selector"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/login_iv_deliver_line"
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/login_layout_phone_input"
            android:src="@color/text_color_ss_gray" />

        <RelativeLayout
            android:id="@+id/login_layout_pwd_input"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_below="@id/login_iv_deliver_line"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/login_iv_pwd_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/es_login_password" />

            <EditText
                android:id="@+id/login_ed_pwd_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/login_iv_pwd_icon"
                android:background="@null"
                android:hint="@string/es_login_pwd_text"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/text_color_dark_gray"
                android:textColorHint="@color/text_color_s_gray"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:id="@+id/login_img_pwd_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/common_delete_selector"
                android:visibility="gone" />


        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/login_btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/login_layout_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_login_bt_selector"
        android:text="@string/es_login_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_white" />

    <TextView
        android:id="@+id/login_tv_forgot_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_forgot_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_bg" />

    <TextView
        android:id="@+id/login_tv_sign_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/login_sign_now"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_bg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="or"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_bts_bottom_bg" />

    <TextView
        android:id="@+id/login_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_random"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_bg" />


</LinearLayout>
