<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.iwork.ui.activity.regist.RegisterActivity">

    <com.iwork.ui.view.TitleBar
        android:id="@+id/register_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/registe_layout_input"
        android:layout_width="fill_parent"
        android:layout_height="96dp"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/register_title_bar"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/common_bg_normal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/registe_iv_phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/es_login_phone_select" />

            <EditText
                android:id="@+id/registe_ed_phone_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/registe_iv_phone_icon"
                android:background="@null"
                android:hint="@string/es_login_phone_text"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/text_color_dark_gray"
                android:textColorHint="@color/text_color_s_gray"
                android:textSize="@dimen/font_size_medium" />

            <ImageView
                android:id="@+id/registe_img_phone_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/common_delete_selector"
                android:visibility="gone" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/registe_iv_deliver_line"
            android:layout_width="fill_parent"
            android:layout_height="0.3dp"
            android:layout_centerInParent="true"
            android:src="@color/text_color_ss_gray" />


        <RelativeLayout
            android:id="@+id/registe_layout_code_input"
            android:layout_width="fill_parent"
            android:layout_height="96dp"
            android:layout_below="@+id/registe_iv_deliver_line"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/registe_tv_get_code"
                android:layout_width="128dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/es_login_get_code_text"
                android:textColor="@color/text_color_bg"
                android:textSize="@dimen/font_size_m_large" />

            <ImageView
                android:id="@+id/registe_iv_code_line"
                android:layout_width="0.3dp"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/registe_tv_get_code"
                android:src="@color/text_color_ss_gray" />

            <EditText
                android:id="@+id/registe_ed_code_input"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toLeftOf="@id/registe_iv_code_line"
                android:background="@null"
                android:hint="@string/es_login_sms_code_text"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true"
                android:textColor="@color/text_color_dark_gray"
                android:textColorHint="@color/text_color_s_gray"
                android:textSize="@dimen/font_size_medium" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/registe_btn_submit"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/registe_layout_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_login_bt_selector"
        android:text="@string/next"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_color_white" />

</RelativeLayout>
